# soothe-sdk

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/soothe_sdk/: __init__.py  _upstream_warnings.py  paths.py
src/soothe_sdk/core/: __init__.py  events.py  exceptions.py  registry.py  subagent_wire.py  types.py  verbosity.py
src/soothe_sdk/display/: __init__.py  _text_utils.py  card_binder.py  card_ledger.py  message_processing.py  snapshot_collapser.py  snapshot_types.py  text_extract.py  tool_message_format.py  tool_result.py  transcript_types.py
src/soothe_sdk/identity/: __init__.py  errors.py
src/soothe_sdk/intention/: __init__.py  models.py
src/soothe_sdk/observability/: __init__.py
src/soothe_sdk/plugin/: __init__.py  context.py  decorators.py  depends.py  emit.py  health.py  manifest.py  registry.py
src/soothe_sdk/protocols/: __init__.py  concurrency.py  core_agent.py  durability.py  identity.py  memory.py  operation_security.py  persistence.py  planner.py  policy.py  vector_store.py
src/soothe_sdk/skillify/: __init__.py  models.py
src/soothe_sdk/tools/: __init__.py  metadata.py
src/soothe_sdk/utils/: __init__.py  formatting.py  logging.py  parsing.py  serde.py  workspace.py
src/soothe_sdk/ux/: __init__.py  classification.py  execute_namespace.py  loop_stream.py  stream_tool_wire.py  subagent_progress.py  subagent_wire_display.py  task_namespace.py  types.py
src/soothe_sdk/wire/: __init__.py  codec.py  protocol.py
tests/: conftest.py  test_decorators.py  test_integration.py  test_types.py
tests/unit/: test_langchain_wire.py  test_loop_stream_phases.py  test_protocol_websocket_codec.py  test_resolve_cli_log_level.py  test_sdk_basic.py  test_sdk_comprehensive.py  test_setup_logging_rotation.py  test_task_namespace.py  test_wire_models.py  test_workspace_mapping.py
tests/unit/core/: test_subagent_wire.py
tests/unit/display/: test_card_binder.py  test_card_ledger.py  test_snapshot_collapser.py  (+2 more)
(+22 files in other folders)
