[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soothe-sdk"
version = "1.0.4"
description = "Slim SDK for Soothe plugins and shared contracts (events, wire, display, protocols)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
keywords = ["soothe", "sdk", "plugins", "agents", "ai", "llm", "wire", "protocols"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "langchain-core>=1.2.0,<2.0.0",  # For message types
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov",
    "ruff>=0.12.0",
    "mypy>=1.0.0",
    "twine>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/mirasoth/soothe-sdk"
Documentation = "https://soothe.readthedocs.io"
Repository = "https://github.com/mirasoth/soothe-sdk"

[tool.hatch.build.targets.wheel]
packages = ["src/soothe_sdk"]

[tool.hatch.build.targets.sdist]
include = ["src/soothe_sdk/"]
exclude = [
    "**/__pycache__",
    "**/*.pyc",
    "**/*.pyo",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
